<resources>
    <string name="app_name">SuperQuiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_superquiz">Welcome to SuperQuiz</string>
    <string name="what_s_your_name">What\'s your name</string>
    <string name="please_type_your_name">Please type your name</string>
    <string name="questions">Questions?</string>
    <string name="answer_a">Answer A</string>
    <string name="answer_b">Answer B</string>
    <string name="answer_c">Answer C</string>
    <string name="answer_d">Answer D</string>
    <string name="response">Response</string>
    <string name="next">Next</string>
</resources>