<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white"

    >


    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questions"
        android:layout_margin="20dp"
        android:textSize="48sp"
        />

    <Button
        android:id="@+id/buttonA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_a"
        android:layout_margin="20dp"
        android:textSize="48sp"
        />

    <Button
        android:id="@+id/buttonB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_b"
        android:layout_margin="20dp"
        android:textSize="48sp"
        />

    <Button
        android:id="@+id/buttonC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_c"
        android:layout_margin="20dp"
        android:textSize="48sp"
        />

    <Button
        android:id="@+id/buttonD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_d"
        android:layout_margin="20dp"
        android:textSize="48sp"
        />

    <LinearLayout
        android:layout_height="130dp"
        android:layout_width="match_parent"
        android:weightSum="100"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/textViewResponse"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/response"
            android:textSize="48sp"
            />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/next"
            android:textSize="48sp"
            android:layout_gravity="center"
            />
    </LinearLayout>

</LinearLayout>